# mihir

./: README.md  eval_set.csv  main.py  pyproject.toml
src/abacusai/: __init__.py  config.py  evaluator.py  extractor.py  pdf_processor.py  validator.py
